# texa

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
src/: CMakeLists.txt  listener.cpp  listener.hpp  main.cpp  session.cpp  session.hpp  utils.cpp  utils.h  utils.hpp
test/: CMakeLists.txt  hello_test.cc
